# Content-Generator

backend/: .gitignore  agent.py  database.py  main.py  models.py  pyproject.toml  supabase_schema.sql
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: Previews.tsx  Sidebar.tsx
